# deploy-register-artifact-action

./: .gitignore  .graphqlconfig  Cargo.toml  Dockerfile  README.md  action.yml  register_docker_image_push.graphql  rust-toolchain.toml  schema.graphql
src/: main.rs
