[package]
name = "deploy-register-artifact-action"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "deploy-register-artifact-action"
path = "src/main.rs"

[dependencies]
reqwest = {version="^0.11", features=["gzip", "brotli", "rustls", "deflate", "json", "blocking"]}
anyhow = "1.0.69"
serde = { version = "^1.0", features = ["derive"] }
clap = { version = "4.1.8", features = ["derive"] }
